--- a/django_snacks/snacks_project/templates/base.html
+++ b/django_snacks/snacks_project/templates/base.html
@@ -15,6 +15,6 @@
                 <h2>H2 template</h2>
             {% endblock content %}
         </main>
-        <footer>Author: Matthew Larkin</footer>
+        <footer>Enjoy the foot.</footer>
     </body>
 </html>
